--- a/pandas_basics.ipynb
+++ b/pandas_basics.ipynb
@@ -602,7 +602,7 @@
     }
    ],
    "source": [
-    "# Following is the object of series. Rows of a single column\n",
+    "# Following is the object of series. (series of rows of a single column)\n",
     "employees_df['name']"
    ]
   },
