--- a/pandas_basics.ipynb
+++ b/pandas_basics.ipynb
@@ -105,7 +105,7 @@
     "# Reading in the csv\n",
     "# A dataframe is a 2-dimensional data structure (data represented in rows and columns)\n",
     "\n",
-    "df = pd.read_csv('./iris.csv')\n",
+    "df = pd.read_csv('./datasets/iris.csv')\n",
     "df.head()"
    ]
   },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
