plotting year vs pop

--- a/matplotlib_basics.ipynb
+++ b/matplotlib_basics.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "# Package for data visualization. \n",
+    "# Visualizing data to extract insights"
    ]
   },
   {
@@ -14,7 +16,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let us first start with a simple example of plotting year vs population to gain insight\n",
+    "\n",
+    "year = [1950, 1970, 1990, 2010]\n",
+    "population = [2.519, 3.692, 5.263, 6.972]\n",
+    "\n",
+    "plt.plot(year, population)"
+   ]
   }
  ],
  "metadata": {
