--- a/python for machine learning/dictionaries.ipynb
+++ b/python for machine learning/dictionaries.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "# Instead let us make a list with (key, value) pairs\n",
+    "# Instead let us make a dictionary with (key, value) pairs\n",
     "\n",
     "country_pop = {\n",
     "    'Albania': 12.9,\n",
