--- a/supervised learning with scikit-learn/measuring_performance.ipynb
+++ b/supervised learning with scikit-learn/measuring_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,70 +230,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = df.iloc[:600, :8].values\n",
-    "y_train = df.iloc[:600, 8].values"
+    "X = df.iloc[:, :8].values\n",
+    "y = df.iloc[:, 8].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = df.iloc[600:, :8].values\n",
-    "y_test = df.iloc[600:, 8].values"
+    "from sklearn.model_selection import train_test_split\n",
+    "''' \n",
+    "(random_state = 21) setting the seed to 21 and using the same number again \n",
+    "lets us produce the same random numbers.\n",
+    "\n",
+    "(stratify=y) we want to make sure that the proportion of labels are exactly \n",
+    "the same in training and testing\n",
+    "'''\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=21, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(n_neighbors=9)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7445887445887446\n"
+     ]
     }
    ],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=9)\n",
-    "knn.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0,\n",
-       "       1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
-       "       1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0,\n",
-       "       0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0,\n",
-       "       1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0], dtype=int64)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "knn.predict(X_test)"
+    "knn.fit(X_train, y_train)\n",
+    "print(knn.score(X_test, y_test))"
    ]
   },
   {
