trying different values for n_neighbors

--- a/supervised learning with scikit-learn/measuring_performance.ipynb
+++ b/supervised learning with scikit-learn/measuring_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "# Accuracy = (correct predictions / total observations)\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -257,19 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7445887445887446\n"
+      "0.7359307359307359\n"
      ]
     }
    ],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=9)\n",
+    "knn = KNeighborsClassifier(n_neighbors=11)\n",
     "knn.fit(X_train, y_train)\n",
     "print(knn.score(X_test, y_test))"
    ]
@@ -279,7 +280,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_accuracies = []\n",
+    "train_accuracies = []\n",
+    "neighbors = np.arange(1, 26)\n",
+    "\n",
+    "for neighbor in neighbors:\n",
+    "    knn = KNeighborsClassifier(n_neighbors=neighbor)\n",
+    "    knn.fit(X_train, y_train)\n",
+    "    test_accuracies.append(knn.score(X_test, y_test))\n",
+    "    train_accuracies.append(knn.score(X_train, y_train))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
