plotting the results

--- a/supervised learning with scikit-learn/measuring_performance.ipynb
+++ b/supervised learning with scikit-learn/measuring_performance.ipynb
@@ -327,7 +327,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# From the graph it seems like the best value for K is around 13"
+   ]
   }
  ],
  "metadata": {
