--- a/supervised learning with scikit-learn/4. decision_tree_classification.ipynb
+++ b/supervised learning with scikit-learn/4. decision_tree_classification.ipynb
@@ -12,6 +12,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                           0\n",
+       "diagnosis                    0\n",
+       "radius_mean                  0\n",
+       "texture_mean                 0\n",
+       "perimeter_mean               0\n",
+       "area_mean                    0\n",
+       "smoothness_mean              0\n",
+       "compactness_mean             0\n",
+       "concavity_mean               0\n",
+       "concave points_mean          0\n",
+       "symmetry_mean                0\n",
+       "fractal_dimension_mean       0\n",
+       "radius_se                    0\n",
+       "texture_se                   0\n",
+       "perimeter_se                 0\n",
+       "area_se                      0\n",
+       "smoothness_se                0\n",
+       "compactness_se               0\n",
+       "concavity_se                 0\n",
+       "concave points_se            0\n",
+       "symmetry_se                  0\n",
+       "fractal_dimension_se         0\n",
+       "radius_worst                 0\n",
+       "texture_worst                0\n",
+       "perimeter_worst              0\n",
+       "area_worst                   0\n",
+       "smoothness_worst             0\n",
+       "compactness_worst            0\n",
+       "concavity_worst              0\n",
+       "concave points_worst         0\n",
+       "symmetry_worst               0\n",
+       "fractal_dimension_worst      0\n",
+       "Unnamed: 32                569\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../datasets/BCancer.csv')\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
