iterating over dicts

--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -29,10 +29,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital of spain is madrid\n",
+      "The capital of france is paris\n",
+      "The capital of germany is berlin\n",
+      "The capital of norway is oslo\n",
+      "The capital of italy is rome\n",
+      "The capital of poland is warsaw\n",
+      "The capital of austria is vienna\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definition of dictionary\n",
+    "europe = {'spain': 'madrid', 'france': 'paris', 'germany': 'berlin',\n",
+    "          'norway': 'oslo', 'italy': 'rome', 'poland': 'warsaw', 'austria': 'vienna'}\n",
+    "\n",
+    "# Iterate over europe\n",
+    "for key, value in europe.items():\n",
+    "    print(\"The capital of \" + key + \" is \" + value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Looping over numpy arrays\n"
+   ]
   }
  ],
  "metadata": {
