--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -58,11 +58,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.2\n",
+      "1.2\n",
+      "23.2\n",
+      "9.9\n",
+      "5.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Looping over numpy arrays\n",
+    "\n",
+    "# If we are dealing with 1D numpy arrays, the looping mechanism is the same as for the 1D lists\n",
+    "import numpy as np\n",
+    "nums = np.array([13.2, 1.2, 23.2, 9.9, 5.2])\n",
+    "\n",
+    "for num in nums:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Looping over numpy arrays\n"
+    "# If we are dealing with 2D arrays, the looping mechanism is the same as for the 1D lists\n"
    ]
   }
  ],
