2D numpy array iteration

--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -86,11 +86,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74,74,72,72,73,69,69,71,76,71,73,73,74,74,69,70,73,75,78,79,76,74,76,72,71,75,77,74,73,74,78,73,75,73,75,75,74,69,71,74,73,73,76,74,74,70,72,77,"
+     ]
+    }
+   ],
    "source": [
-    "# If we are dealing with 2D arrays, the looping mechanism is the same as for the 1D lists\n"
+    "# If we are dealing with 2D arrays, the looping mechanism is the same as for the 1D lists\n",
+    "twod_nums = np.array([\n",
+    "    [74, 74, 72, 72, 73, 69, 69, 71, 76, 71, 73, 73, 74, 74, 69, 70, 73, 75, 78, 79, 76, 74, 76, 72],\n",
+    "    [71, 75, 77, 74, 73, 74, 78, 73, 75, 73, 75, 75, 74, 69, 71, 74, 73, 73, 76, 74, 74, 70, 72, 77]\n",
+    "])\n",
+    "\n",
+    "# Use np.nditer() to iterate over each element of the 2D array\n",
+    "for val in np.nditer(twod_nums):\n",
+    "    print(val, end=\",\")"
    ]
   }
  ],
