--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -108,6 +108,100 @@
     "for val in np.nditer(twod_nums):\n",
     "    print(val, end=\",\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Field of Interest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ammar</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Computer Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Manaf</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Software Engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Theoretical Physics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Haris</td>\n",
+       "      <td>21</td>\n",
+       "      <td>ML Engineering</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age     Field of Interest\n",
+       "0  Ammar   22      Computer Science\n",
+       "1  Manaf   21  Software Engineering\n",
+       "2   John   20   Theoretical Physics\n",
+       "3  Haris   21        ML Engineering"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([\n",
+    "    [\"Ammar\", 22, \"Computer Science\"],\n",
+    "    [\"Manaf\", 21, \"Software Engineering\"],\n",
+    "    [\"John\", 20, \"Theoretical Physics\"],\n",
+    "    [\"Haris\", 21, \"ML Engineering\"]\n",
+    "])\n",
+    "\n",
+    "df.columns = [\"Name\", \"Age\", \"Field of Interest\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
