traditional looping on df

--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -198,6 +198,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name\n",
+      "Age\n",
+      "Field of Interest\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we were to loop through the dataframe in a traditional way as we did with the list, we'll get the column names only\n",
+    "for v in df:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
