--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -219,6 +219,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row no. 0\n",
+      "Name                            Ammar\n",
+      "Age                                22\n",
+      "Field of Interest    Computer Science\n",
+      "Name: 0, dtype: object\n",
+      "\n",
+      "Row no. 1\n",
+      "Name                                Manaf\n",
+      "Age                                    21\n",
+      "Field of Interest    Software Engineering\n",
+      "Name: 1, dtype: object\n",
+      "\n",
+      "Row no. 2\n",
+      "Name                                John\n",
+      "Age                                   20\n",
+      "Field of Interest    Theoretical Physics\n",
+      "Name: 2, dtype: object\n",
+      "\n",
+      "Row no. 3\n",
+      "Name                          Haris\n",
+      "Age                              21\n",
+      "Field of Interest    ML Engineering\n",
+      "Name: 3, dtype: object\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let us now iterate through rows of the dataframe\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    print(\"Row no. \" + str(index))\n",
+    "    print(row, end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
