iterating through columns

--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -263,10 +263,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computer Science\n",
+      "Software Engineering\n",
+      "Theoretical Physics\n",
+      "ML Engineering\n",
+      "\n",
+      "\n",
+      "Computer Science\n",
+      "Software Engineering\n",
+      "Theoretical Physics\n",
+      "ML Engineering\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Printing only the values of a specific column\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row.iloc[2])\n",
+    "\n",
+    "# OR\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row['Field of Interest'])"
+   ]
   }
  ],
  "metadata": {
