--- a/python for machine learning/looping_over_data_structures.ipynb
+++ b/python for machine learning/looping_over_data_structures.ipynb
@@ -294,6 +294,187 @@
     "for index, row in df.iterrows():\n",
     "    print(row['Field of Interest'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Field of Interest</th>\n",
+       "      <th>name_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ammar</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Manaf</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Software Engineering</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Theoretical Physics</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Haris</td>\n",
+       "      <td>21</td>\n",
+       "      <td>ML Engineering</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age     Field of Interest  name_length\n",
+       "0  Ammar   22      Computer Science          5.0\n",
+       "1  Manaf   21  Software Engineering          5.0\n",
+       "2   John   20   Theoretical Physics          4.0\n",
+       "3  Haris   21        ML Engineering          5.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    If we wanted to add a new column named name_length, where each value\n",
+    "    in this column is simply the length of the value in the name column in \n",
+    "    each row. We could do something like the following\n",
+    "'''\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    df.loc[index, 'name_length'] = len(row['Name'])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Field of Interest</th>\n",
+       "      <th>name_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ammar</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Manaf</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Software Engineering</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Theoretical Physics</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Haris</td>\n",
+       "      <td>21</td>\n",
+       "      <td>ML Engineering</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age     Field of Interest  name_length\n",
+       "0  Ammar   22      Computer Science            5\n",
+       "1  Manaf   21  Software Engineering            5\n",
+       "2   John   20   Theoretical Physics            4\n",
+       "3  Haris   21        ML Engineering            5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    This is quite computationally intensive operation, since for \n",
+    "    adding a new value to our newly created column, we are creating \n",
+    "    a new series object at each iteration. The efficient way is to \n",
+    "    use the apply method.\n",
+    "'''\n",
+    "\n",
+    "df['name_length'] = df['Name'].apply(len)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
