--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -51,6 +51,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 51\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    If dice is 1 or 2, you go one step down.\n",
+    "    if dice is 3, 4 or 5, you go one step up.\n",
+    "    Else, you throw the dice again. The number of eyes is the number of steps you go up.\n",
+    "'''\n",
+    "\n",
+    "# Starting step\n",
+    "step = 50\n",
+    "\n",
+    "# Roll the dice\n",
+    "dice = np.random.randint(1, 7)\n",
+    "\n",
+    "# Finish the control construct\n",
+    "if dice <= 2:\n",
+    "    step = step - 1\n",
+    "elif dice > 2 and dice < 6:\n",
+    "    step = step + 1\n",
+    "else:\n",
+    "    step = step + np.random.randint(1, 7)\n",
+    "\n",
+    "# Print out dice and step\n",
+    "print(dice, step)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
