--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -92,7 +92,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Random walk\n"
+   ]
   }
  ],
  "metadata": {
