--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -89,11 +89,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 0, 1, 2, 3, 2, 1, 0, -1, -2, -3, -4, -5, -4, 1, 0, -1, 0, -1, 0, 1, 2, 3, 4, 3, 4, 3, 4, 5, 6, 7, 6, 10, 11, 10, 11, 10, 11, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 28, 29, 33, 34, 33, 34, 35, 34, 35, 36, 38, 39, 40, 39, 38, 39, 40, 39, 38, 39, 40, 42, 41, 40, 41, 40, 41, 42, 43, 45, 44, 45, 46, 47, 48, 49, 48, 47, 48, 47, 48, 49, 48, 51, 52, 53, 54, 53, 54, 55, 59]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Random walk\n"
+    "# Random walk\n",
+    "# Initialize random_walk\n",
+    "random_walk = [0]\n",
+    "\n",
+    "for x in range(99):\n",
+    "    # Set step: last element in random_walk\n",
+    "    step = random_walk[-1]\n",
+    "\n",
+    "    # Roll the dice\n",
+    "    dice = np.random.randint(1, 7)\n",
+    "\n",
+    "    # Determine next step\n",
+    "    if dice <= 2:\n",
+    "        step = step - 1\n",
+    "    elif dice <= 5:\n",
+    "        step = step + 1\n",
+    "    else:\n",
+    "        step = step + np.random.randint(1, 7)\n",
+    "\n",
+    "    # append next_step to random_walk\n",
+    "    random_walk.append(step)\n",
+    "\n",
+    "# Print random_walk\n",
+    "print(random_walk)\n"
    ]
   }
  ],
