random walk code

--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -124,7 +124,7 @@
     "    random_walk.append(step)\n",
     "\n",
     "# Print random_walk\n",
-    "print(random_walk)\n"
+    "print(random_walk)"
    ]
   }
  ],
