--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Plot random_walk\n",
-    "plt.plot(list(range(101)), random_walk)\n",
+    "plt.plot(random_walk)\n",
     "plt.xlabel(\"Number of throws\")\n",
     "plt.ylabel(\"Step\")\n",
     "# Show the plot\n",
