distribution of random walks

--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -165,7 +165,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let us now construct the distribution of dice random walks\n",
+    "\n",
+    "# Initialize all_walks (don't change this line)\n",
+    "all_walks = []\n",
+    "\n",
+    "# Simulate random walk 10 times\n",
+    "for i in range(10):\n",
+    "\n",
+    "    # Code from before\n",
+    "    random_walk = [0]\n",
+    "    for x in range(100):\n",
+    "        step = random_walk[-1]\n",
+    "        dice = np.random.randint(1, 7)\n",
+    "\n",
+    "        if dice <= 2:\n",
+    "            step = max(0, step - 1)\n",
+    "        elif dice <= 5:\n",
+    "            step = step + 1\n",
+    "        else:\n",
+    "            step = step + np.random.randint(1, 7)\n",
+    "        random_walk.append(step)\n",
+    "\n",
+    "    # Append random_walk to all_walks\n",
+    "    all_walks.append(random_walk[-1])\n",
+    "\n",
+    "# Print all_walks\n",
+    "print(all_walks)"
+   ]
   }
  ],
  "metadata": {
