calculating the odds, after 500 simulations

--- a/python for machine learning/hacker_statistics.ipynb
+++ b/python for machine learning/hacker_statistics.ipynb
@@ -368,6 +368,29 @@
     "plt.hist(ends)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.60000000000001"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the odds of having 60 steps at each simulation\n",
+    "num_of_60 = len(ends[ends >= 60])\n",
+    "odds = (num_of_60 / len(ends)) * 100\n",
+    "odds"
+   ]
   }
  ],
  "metadata": {
